Fixed the spacing for the about section to fit different devices

--- a/anthony-testApp/public/assets/css/about_style.css
+++ b/anthony-testApp/public/assets/css/about_style.css
@@ -528,13 +528,27 @@ color: #c492eb;
 
 
 
+@media (max-width: 1700px) {
+  
+  .about-card img {
+    
+   display: none;
+  }
+}
 
 
 
 
 
 
-
+@media (max-width: 1590px) {
+  
+  .about-card img {
+    
+    display: none;
+    
+  }
+}
 
 
 
